Fixed problem of exporting com.sun.javafx.scene.control to com.jfoenix (when clicking "Custom color" in picking color for task)