@@ -95,6 +95,8 @@
                         <option> javafx.graphics/com.sun.javafx.stage=com.jfoenix </option>
                         <option> --add-exports </option>
                         <option> javafx.base/com.sun.javafx.event=com.jfoenix </option>
+                        <option> --add-exports </option>
+                        <option> javafx.controls/com.sun.javafx.scene.control=com.jfoenix </option>
                     </options>
                     <commandlineArgs>-Xmx1024m</commandlineArgs>
                 </configuration>
